crates/qwik-optimizer-oxc/tests/snapshots/should_extract_single_qrl_with_index.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useSignal, Signal } from "@qwik.dev/core";
export const App = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const selectedItem = useSignal<any | null>(null);
  const clickedIndex = useSignal<number | null>(null);
  return (
    <div>
      {data.value.map((row, idx) => (
        <tr key={untrack(() => row.value.id)} class={row.value.selected.value ? "danger" : ""}>
          <td class="col-md-1">{row.value.id}</td>
          <td class="col-md-4">
            <a
              onClick$={() => {
                if (selectedItem.value) {
                  selectedItem.value.selected.value = false;
                }
                selectedItem.value = row.value;
                row.value.selected.value = true;
                clickedIndex.value = idx;
              }}
            >
              {row.value.label.value}
            </a>
          </td>
          <td class="col-md-1">
            <a
              onClick$={() => {
                const dataValue = untrack(() => data.value);
                data.value = dataValue.toSpliced(
                  dataValue.findIndex((d) => d.value.id === row.value.id),
                  1,
                );
              }}
            >
              <span aria-hidden="true">x</span>
            </a>
          </td>
          <td class="col-md-6" />
        </tr>
      ))}
    </div>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_XXXXXXXXXXXX");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== test.tsx_App_component_XXXXXXXXXXXX.js === (ENTRY)
import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0) => (p0.value.selected.value ? "danger" : "");
const _hf0_str = 'p0.value.selected.value?"danger":""';
const _hf1 = (p0) => p0.value.id;
const _hf1_str = "p0.value.id";
const _hf2 = (p0) => p0.value.label.value;
const _hf2_str = "p0.value.label.value";
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX");
export const App_component_XXXXXXXXXXXX = () => {
  const data = useSignal([]);
  const selectedItem = useSignal(null);
  const clickedIndex = useSignal(null);
  const App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX",
    [clickedIndex, selectedItem],
  );
  const App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX = /* @__PURE__ */ qrl(
    i_XXXXXXXXXXXX,
    "App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX",
    [data],
  );
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    null,
    data.value.map((row, idx) =>
      /* @__PURE__ */ _jsxSorted(
        "tr",
        {
          class: _fnSignal(_hf0, [row], _hf0_str),
        },
        null,
        [
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            {
              class: "col-md-1",
            },
            _fnSignal(_hf1, [row], _hf1_str),
            1,
            null,
          ),
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            {
              class: "col-md-4",
            },
            /* @__PURE__ */ _jsxSorted(
              "a",
              {
                "q-e:click": App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX,
                "q:ps": [row, idx],
              },
              null,
              _fnSignal(_hf2, [row], _hf2_str),
              0,
              null,
            ),
            1,
            null,
          ),
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            {
              class: "col-md-1",
            },
            /* @__PURE__ */ _jsxSorted(
              "a",
              {
                "q-e:click": App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX,
                "q:p": row,
              },
              null,
              /* @__PURE__ */ _jsxSorted(
                "span",
                null,
                {
                  "aria-hidden": "true",
                },
                "x",
                3,
                null,
              ),
              2,
              null,
            ),
            1,
            null,
          ),
          /* @__PURE__ */ _jsxSorted(
            "td",
            null,
            {
              class: "col-md-6",
            },
            null,
            3,
            null,
          ),
        ],
        1,
        untrack(() => row.value.id),
      ),
    ),
    1,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX = (_, _1, row, idx) => {
  const clickedIndex = _captures[0],
    selectedItem = _captures[1];
  if (selectedItem.value) selectedItem.value.selected.value = false;
  selectedItem.value = row.value;
  row.value.selected.value = true;
  clickedIndex.value = idx;
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "row",
    "idx"
  ],
  "captureNames": [
    "clickedIndex",
    "selectedItem"
  ]
}
*/

=== test.tsx_App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX = (_, _1, row) => {
  const data = _captures[0];
  const dataValue = untrack(() => data.value);
  data.value = dataValue.toSpliced(
    dataValue.findIndex((d) => d.value.id === row.value.id),
    1,
  );
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_q_e_click_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_q_e_click_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "App_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "paramNames": [
    "_",
    "_",
    "row"
  ],
  "captureNames": [
    "data"
  ]
}
*/

=== DIAGNOSTICS ===

[]
