crates/qwik-optimizer-oxc/tests/snapshots/should_ignore_null_inlined_qrl.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { inlinedQrl } from "@qwik.dev/core";

const foo = inlinedQrl(null, "some_hash");

=== test.js ===
import { inlinedQrl } from "@qwik.dev/core";
inlinedQrl(null, "some_hash");

=== DIAGNOSTICS ===

[]
